<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/pullfresh"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.drawerlayout.widget.DrawerLayout
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
<androidx.appcompat.widget.Toolbar
	android:id="@+id/toolbar"
	android:layout_width="match_parent"
	android:layout_height="?attr/actionBarSize"
	android:background="@color/colorPrimary"
	android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
	app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
<RelativeLayout
	android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip"
    android:paddingBottom="0dip"
	tools:context="MainActivity"
    android:background="@color/colorPrimary">

	<RelativeLayout
		android:id="@+id/msw_welcome"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:background="@color/white"
		android:gravity="center_vertical|center_horizontal|center"
		android:visibility="visible"
		tools:ignore="RtlHardcoded">

		<ImageView
			android:id="@+id/msw_logo"
			android:layout_width="275dip"
			android:layout_height="100dip"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:layout_gravity="top"
			android:contentDescription="@string/image_view"
			android:gravity="center_vertical|center_horizontal|center"
			android:src="@raw/front_splash" />

		<TextView
			android:id="@+id/msw_loading_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/msw_logo"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="26dp"
			android:gravity="center_vertical|center_horizontal|center"
			android:text="@string/app_name"
			android:textColor="@color/splashScreenColor"
			android:textSize="18sp"
			android:textStyle="normal|bold"
			tools:ignore="NotSibling" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/msw_loading_text"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="120dp"
			android:gravity="center_vertical|center_horizontal|center"
			android:text="@string/sngine_demo"
			android:textColor="@color/splashScreenColor"
			android:textSize="18sp"
			android:textStyle="normal|bold"
			tools:ignore="NotSibling" />
	</RelativeLayout>
    <WebView
        android:id="@+id/msw_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" />
    <ProgressBar
        android:id="@+id/msw_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:progressDrawable="@drawable/progress_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="visible" />
</RelativeLayout>
</LinearLayout>
<LinearLayout
	android:id="@+id/nav_drawer"
	android:layout_width="280dp"
	android:layout_height="match_parent"
	android:layout_gravity="start"
	android:background="@color/white"
	android:orientation="vertical"
	android:paddingTop="16dp">
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="@color/colorPrimary"
		android:padding="16dp" />
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#E0E0E0" />
	<TextView
		android:id="@+id/nav_home"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/menu_home"
		android:textSize="16sp"
		android:textColor="#212121"
		android:padding="16dp"
		android:gravity="center_vertical"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true" />
	<TextView
		android:id="@+id/nav_settings"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/menu_settings"
		android:textSize="16sp"
		android:textColor="#212121"
		android:padding="16dp"
		android:gravity="center_vertical"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true" />
	<TextView
		android:id="@+id/nav_about"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/menu_about"
		android:textSize="16sp"
		android:textColor="#212121"
		android:padding="16dp"
		android:gravity="center_vertical"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true" />
	<TextView
		android:id="@+id/nav_help"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/menu_help"
		android:textSize="16sp"
		android:textColor="#212121"
		android:padding="16dp"
		android:gravity="center_vertical"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true" />
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#E0E0E0"
		android:layout_marginTop="8dp" />
	<TextView
		android:id="@+id/nav_share"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/menu_share"
		android:textSize="16sp"
		android:textColor="#212121"
		android:padding="16dp"
		android:gravity="center_vertical"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true" />
	<TextView
		android:id="@+id/nav_rate"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/menu_rate"
		android:textSize="16sp"
		android:textColor="#212121"
		android:padding="16dp"
		android:gravity="center_vertical"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true" />
</LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
